Correção HTML - faq e acrescentado o ahref no footer

--- a/index.html
+++ b/index.html
@@ -11,199 +11,206 @@
 
         <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
         <link rel="icon" href="../Imagens/icon.png">
-
+      
     </head>
     <body>
-        <div class="container">
-            <header class="header">
-                <div class="logo">Netflix Brasil - assistir a séries online, assistir a filmes online.</div> 
-                <select class="select-linguage"><i class="fa fa-globe" aria-hidden="true"></i> 
-                        <option>Português</option>
-                        <option>English</option>   
-                </select>
-                <button class="redbutton">Entrar</a>
-                    <a href="#" class="redbutton">Entrar</a>
-                </button>
-            </header>
-            <main class="main">
-                <div class="main-child">
-                <h1>Filmes, séries e muito mais. Sem limites.</h1>
-                <h2>Assista onde quiser. Cancele quando quiser.</h2>
-                <p>Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
-                <div class="cta-simple">
-                  <form class="cta-form email-form" method="GET">  
-                    <ul class="simpleform">
-                        <li>           
-                            <label class="input-id" placeholder="email">
-                                <input type="email" name="email" autoComplete="email" placeholder="Email"/>
-                            </label>
-                        </li>
-                    </ul>
-                    <button class="btn-custom"  type="submit" role="link" autoComplete="off">
-                        <span>Vamos lá</span>
-                    </button>
-                        </div>
-                    </div>
-                </form>
-              </div>
-                <div class="gradient"></div>
-            </main>
-        </div>
-        <section class="hero-tv">
-            <div class="hero-container">
-              <div class="hero">
-                <div>
-                  <h1>Aproveite na TV.</h1>
-                  <p>
-                    Assista em Smart TVs, PlayStation, Xbox, Chromecast, Apple TV,
-                    aparelhos de Blu-ray e outros aparelhos.
-                  </p>
-                </div>
-                <div class="img-tv">
-                  <img src="../Imagens/tv.png" alt="TV" />
-               </div>
-              </div>
-            </div>
-          </section>
-          <section class="hero-offline">
-              <div class="hero-container">
-                  <div class="hero">
-                <div>
-                  <h1>Baixe séries para assistir offline.</h1>
-                  <p>Salve seus títulos favoritos e sempre tenha algo para assistir.</p>
-                </div>
-                <div class="mobile">
-                  <img src="../Imagens/mobile.jpg" alt="#"/>
-                </div>
-              </div>
-            </div>
-          </section>
-          <section class="hero-full">
-              <div class="hero-container">
-                  <div class="hero">
-                <div>
-                  <h1>Assista quando quiser.</h1>
-                  <p>
-                    Assista no celular, tablet, smart TV ou notebook sem pagar a mais
-                    por isso.
-                  </p>
-                </div>
-                <div class="mac">
-                  <img src="../Imagens/device-mac.png" alt="#"/>
-                </div>
-              </div>
-            </div>
-          </section>
-          <section class="hero-kids">
-              <div class="hero-container">
-                  <div class="hero">
-                <div>
-                  <h1>Crie perfis para crianças.</h1>
-                  <p>Deixe as crianças se aventurarem com seus personagens favoritos em um espaço feito só para elas, sem pagar a mais por isso.</p>
-                </div>
-                <div class="inf-funfo">
-                  <img src="../Imagens/inf-funfo.png" alt="#" />
-                </div>
-              </div>
-            </div>
-          </section>
-         <section class="faq">
-            <h1>Perguntas frequentes</h1>
-            <div class='question'>
-              <button class="accordion">
-                  <input type='checkbox' id='question-1'>
-                  <label for='question-1'>O que é a Netflix?</label>
-                  <div class='answer'> A Netflix é um serviço de transmissão online que oferece uma ampla variedade de séries, filmes e documentários premiados em milhares de aparelhos conectados à internet.
-                  <br>
-                  <br>
-                  Você pode assistir a quantos filmes e séries quiser, quando e onde quiser, sem comerciais – tudo por um preço mensal bem acessível. Aqui você sempre encontra novidades. A cada semana, adicionamos novas séries e filmes.
-                  </div>
-              </button>
-          </div>
-          <div class='question'>
-              <button class="accordion">
-                  <input type='checkbox' id='question-2'>
-                  <label for='question-2'>Quanto custa a Netflix?</label>
-                  <div class='answer'>Assista à Netflix no seu celular, tablet, Smart TV, notebook ou aparelho de streaming por uma taxa mensal única. Os planos variam de R$21,90 a R$45,90 por mês. Sem contrato nem taxas extras.
-                  </div>
-              </button>
-          </div>        
-          <div class='question'>
-              <button class="accordion">
-                  <input type='checkbox' id='question-3'>
-                  <label for='question-3'>Onde posso assistir?</label>
-                  <div class='answer'>Assista onde quiser, o quanto quiser e em um número ilimitado de aparelhos. Faça login com sua conta Netflix em netflix.com para começar a assistir no computador ou em qualquer aparelho conectado à Internet compatível com o aplicativo Netflix, como Smart TVs, smartphones, tablets, aparelhos de streaming e videogames.
-                      <br>
-                      <br>
-                      Você também pode baixar a sua série favorita com o aplicativo Netflix para iOS, Android ou Windows 10. Use downloads para levar a Netflix para onde quiser sem precisar de conexão com a Internet. Leve a Netflix com você para qualquer lugar.
-                  </div>
-              </button>
-          </div>   
-          <div class='question'>
-              <button class="accordion">
-                  <input type='checkbox' id='question-4'>
-                  <label for='question-4'>Como faço para cancelar?</label>
-                  <div class='answer'>A Netflix é flexível. Não há contratos nem compromissos. Você pode cancelar a sua conta na internet com apenas dois cliques. Não há taxa de cancelamento – você pode começar ou encerrar a sua assinatura a qualquer momento.
-                  </div>
-              </button>
-          </div>
-          <div class='question'>
-              <button class="accordion">
-                  <input type='checkbox' id='question-5'>
-                  <label for='question-5'>O que eu posso assistir na Netflix?</label>
-                  <div class='answer'>A Netflix tem um grande catálogo de filmes, documentários, séries, originais Netflix premiados e muito mais. Assista o quanto quiser, quando quiser.
-                  </div>
-              </button>
-          </div>
-          <div class='question'>
-              <button class="accordion">
-                  <input type='checkbox' id='question-6'>
-                  <label for='question-6'>A Netflix é adequada para crianças?</label>
-                  <div class='answer'>A experiência infantil da Netflix faz parte da sua assinatura para que as crianças se divirtam em seu próprio espaço com séries e filmes familiares sob a supervisão dos pais.
-                  </div>
-              </button>
-          </div>
-          <form class="cta-form email-form" method="GET">
-            <h1 class="text-form">Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</h1>  
-            <ul class="simpleform">
-                <li>           
-                    <label class="input-id" placeholder="email">
-                        <input type="email" name="email" autoComplete="email" placeholder="Email"/>
-                    </label>
-                </li>
-            </ul>
-            <button class="btn-custom"  type="submit" role="link" autoComplete="off">
-                <span>Vamos lá</span>
-            </button>
-                </div>
-            </div>
-        </form>
-          <footer class="footer">
-            <p>Dúvidas? Ligue <a href="tel: 0800-761-4631">0800-761-4631</a></p>
-            <ul>
-                <li>Perguntas frequentes</li>
-                <li>Centro de ajuda</li>
-                <li>Conta</li>
-                <li>Imprensa</li>
-                <li>Relações com investidores</li>
-                <li>Carreiras</li>
-                <li>Resgatar cartão pré-pago</li>
-                <li>Comprar cartão pré-pago</li>
-                <li>Formas de assistir</li>
-                <li>Termos de uso</li>
-                <li>Privacidade</li>
-                <li>Preferências de cookies</li>
-                <li>Informações corporativas</li>
-                <li>Entre em contato</li>
-                <li>Teste de velocidade</li>
-                <li>Avisos legais</li>
-                <li>Só na Netflix</li>
-            </ul>
-            <select class="select-linguage"><i class="fa fa-globe" aria-hidden="true"></i> 
+      <div class="container">
+        <header class="header">
+          <div class="logo"></div> 
+            <select class="select-linguage">
+              <i class="fa fa-globe" aria-hidden="true"></i> 
               <option>Português</option>
               <option>English</option>   
             </select>
-          <p class="footer-country">&copy; Netflix Brasil.</p>
-        </footer>
-    </body>
+          <button class="redbutton">Entrar</a>
+            <a href="#" class="redbutton">Entrar</a>
+          </button>
+        </header>
+        <main class="main">
+          <div class="main-child">
+            <h1>Filmes, séries e muito mais. Sem limites.</h1>
+            <h2>Assista onde quiser. Cancele quando quiser.</h2>
+            <p>Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
+          <div class="cta-simple">
+            <form class="cta-form email-form" method="GET">  
+              <ul class="simpleform">
+                <li>           
+                  <label class="input-id" placeholder="email">
+                    <input type="email" placeholder="Email"/>
+                  </label>
+                </li>
+              </ul>
+              <button class="btn-custom">
+                <span>Vamos lá</span>
+              </button>
+            </form>
+          </div>
+          <div class="gradient"></div>
+        </main>
+      </div>
+      <section class="hero-tv">
+        <div class="hero-container">
+          <div class="hero">
+            <div>
+              <h1>Aproveite na TV.</h1>
+              <p>
+                Assista em Smart TVs, PlayStation, Xbox, Chromecast, Apple TV,
+                aparelhos de Blu-ray e outros aparelhos.
+              </p>
+            </div>
+            <div class="img-tv">
+              <img src="../Imagens/tv.png" alt="TV" />
+              <video class="video-tv" autoplay playsinline muted loop>
+                <source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices.m4v" type="video/mp4" />
+              </video>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="hero-offline">
+        <div class="hero-container">
+          <div class="hero">
+            <div>
+              <h1>Baixe séries para assistir offline.</h1>
+              <p>Salve seus títulos favoritos e sempre tenha algo para assistir.</p>
+            </div>
+            <div class="mobile">
+              <img src="../Imagens/mobile.jpg" alt="#"/>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="hero-full">
+          <div class="hero-container">
+              <div class="hero">
+            <div>
+              <h1>Assista quando quiser.</h1>
+              <p>
+                Assista no celular, tablet, smart TV ou notebook sem pagar a mais
+                por isso.
+              </p>
+            </div>
+            <div class="mac">
+              <img src="../Imagens/device-mac.png" alt="#"/>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="hero-kids">
+          <div class="hero-container">
+              <div class="hero">
+            <div>
+              <h1>Crie perfis para crianças.</h1>
+              <p>Deixe as crianças se aventurarem com seus personagens favoritos em um espaço feito só para elas, sem pagar a mais por isso.</p>
+            </div>
+            <div class="inf-funfo">
+              <img src="../Imagens/inf-funfo.png" alt="#" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="faq">
+        <h1 class="faq-title">Perguntas frequentes</h1>
+        <div class='question'>
+          <button class="accordion">
+            <input type='checkbox' id='question-1'>
+            <label for='question-1'>O que é a Netflix?</label>
+            <div class='answer'> A Netflix é um serviço de transmissão online que oferece uma ampla variedade de séries, filmes e documentários premiados em milhares de aparelhos conectados à internet.
+            <br>
+            <br>
+            Você pode assistir a quantos filmes e séries quiser, quando e onde quiser, sem comerciais – tudo por um preço mensal bem acessível. Aqui você sempre encontra novidades. A cada semana, adicionamos novas séries e filmes.
+            </div>
+          </button>
+        </div>
+        <div class='question'>
+            <button class="accordion">
+                <input type='checkbox' id='question-2'>
+                <label for='question-2'>Quanto custa a Netflix?</label>
+                <div class='answer'>Assista à Netflix no seu celular, tablet, Smart TV, notebook ou aparelho de streaming por uma taxa mensal única. Os planos variam de R$21,90 a R$45,90 por mês. Sem contrato nem taxas extras.
+                </div>
+            </button>
+        </div>        
+        <div class='question'>
+            <button class="accordion">
+                <input type='checkbox' id='question-3'>
+                <label for='question-3'>Onde posso assistir?</label>
+                <div class='answer'>Assista onde quiser, o quanto quiser e em um número ilimitado de aparelhos. Faça login com sua conta Netflix em netflix.com para começar a assistir no computador ou em qualquer aparelho conectado à Internet compatível com o aplicativo Netflix, como Smart TVs, smartphones, tablets, aparelhos de streaming e videogames.
+                    <br>
+                    <br>
+                    Você também pode baixar a sua série favorita com o aplicativo Netflix para iOS, Android ou Windows 10. Use downloads para levar a Netflix para onde quiser sem precisar de conexão com a Internet. Leve a Netflix com você para qualquer lugar.
+                </div>
+            </button>
+        </div>   
+        <div class='question'>
+            <button class="accordion">
+                <input type='checkbox' id='question-4'>
+                <label for='question-4'>Como faço para cancelar?</label>
+                <div class='answer'>A Netflix é flexível. Não há contratos nem compromissos. Você pode cancelar a sua conta na internet com apenas dois cliques. Não há taxa de cancelamento – você pode começar ou encerrar a sua assinatura a qualquer momento.
+                </div>
+            </button>
+        </div>
+        <div class='question'>
+            <button class="accordion">
+                <input type='checkbox' id='question-5'>
+                <label for='question-5'>O que eu posso assistir na Netflix?</label>
+                <div class='answer'>A Netflix tem um grande catálogo de filmes, documentários, séries, originais Netflix premiados e muito mais. Assista o quanto quiser, quando quiser.
+                </div>
+            </button>
+        </div>
+        <div class='question'>
+            <button class="accordion">
+                <input type='checkbox' id='question-6'>
+                <label for='question-6'>A Netflix é adequada para crianças?</label>
+                <div class='answer'>A experiência infantil da Netflix faz parte da sua assinatura para que as crianças se divirtam em seu próprio espaço com séries e filmes familiares sob a supervisão dos pais.
+                </div>
+            </button>
+        </div>
+      </section>
+      <div class="cta-simple2">
+        <h1 class="text-foot">Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</h1>  
+        <form class="form-foot" method="GET">
+          <ul class="simple-foot">
+              <li>           
+                  <label class="input-id" placeholder="email">
+                      <input type="email" name="email" autoComplete="email" placeholder="Email"/>
+                  </label>
+              </li>
+          </ul>
+          <button class="btn-foot"  type="submit" role="link" autoComplete="off">
+              <span>Vamos lá</span>
+          </button>
+          </div>
+        </div>
+        </form>
+      </div>
+      <div class="footer">
+        <footer class="footer-1">
+          <p>Dúvidas? Ligue <a href="tel: 0800-761-4631">0800-761-4631</a></p>
+          <ul>
+            <li id="item1"><a href="https://help.netflix.com/pt/node/412" target="_blank">Perguntas frequentes</a></li>
+            <li id="item2"><a href="https://help.netflix.com/pt/" target="_blank">Centro de ajuda</a></li>
+            <li id="item3"><a href="https://www.netflix.com/br/login?nextpage=https%3A%2F%2Fwww.netflix.com%2Fyouraccount" target="_blank">Conta</a></li>
+            <li id="item4"><a href="#https://media.netflix.com/pt_br/" target="_blank">Media Center</a></li>
+            <li id="item5"><a href="#https://ir.netflix.net/ir-overview/profile/default.aspx" target="_blank">Relações com investidores</a></li>
+            <li id="item6"><a href="#" target="_blank">Carreiras</a></li>
+            <li id="item7"><a href="#" target="_blank">Resgatar cartão pré-pago</a></li>
+            <li id="item8"><a href="#" target="_blank">Comprar cartão pré-pago</a></li>
+            <li id="item9"><a href="#" target="_blank">Formas de assistir</a></li>
+            <li id="item10"><a href="#" target="_blank">Termos de uso</a></li>
+            <li id="item11"><a href="#" target="_blank">Privacidade</a></li>
+            <li id="item12"><a href="#" target="_blank">Preferências de cookies</a></li>
+            <li id="item13"><a href="#" target="_blank">Informações corporativas</a></li>
+            <li id="item14"><a href="#" target="_blank">Entre em contato</a></li>
+            <li id="item15"><a href="#" target="_blank">Teste de velocidade</a></li>
+            <li id="item16"><a href="#" target="_blank">Avisos legais</a></li>
+            <li id="item17"><a href="#" target="_blank">Só na Netflix</a></li>
+          </ul>
+          <select class="select-linguage"><i class="fa fa-globe" aria-hidden="true"></i> 
+            <option>Português</option>
+            <option>English</option>   
+          </select>
+        <p class="footer-country">&copy; Netflix Brasil.</p>
+      </footer>
+    </div>
+  </body>
 </html>
