--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="img-tv">
               <img src="../Imagens/tv.png" alt="TV" />
               <video class="video-tv" autoplay playsinline muted loop>
-                <source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices.m4v" type="video/mp4" />
+                <source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-0819.m4v" type="video/mp4" />
               </video>
             </div>
           </div>
@@ -92,6 +92,9 @@
             </div>
             <div class="mac">
               <img src="../Imagens/device-mac.png" alt="#"/>
+              <video class="video-mac" autoplay playsinline muted loop>
+                <source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices.m4v" type="video/mp4" />
+              </video>
             </div>
           </div>
         </div>
